force-app/main/default/objects/EV_CriterioPublicoObjetivo__c/EV_CriterioPublicoObjetivo__c.object-meta.xml
<CustomObject>
    <description>Objeto relacionado entre Variables Publico objetivo y campaña para realizar la selección del público objetivo.</description>
    <label>Criterio público objetivo</label>
    <nameField>
        <displayFormat>CPO-{0000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Criterios público objetivo</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>