force-app/main/default/objects/EV_CriterioPublicoObjetivo__c/fields/EV_Activo__c.field-meta.xml
<CustomField>
    <fullName>EV_Activo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Activo</label>
    <type>Checkbox</type>
</CustomField>