force-app/main/default/objects/EV_CriterioPublicoObjetivo__c/fields/EV_EditableValorCriterio__c.field-meta.xml
<CustomField>
    <fullName>EV_EditableValorCriterio__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Editable Valor Criterio</label>
    <type>Checkbox</type>
</CustomField>