force-app/main/default/objects/EV_CriterioPublicoObjetivo__c/fields/EV_Evento__c.field-meta.xml
<CustomField>
    <fullName>EV_Evento__c</fullName>
    <description>Relación al evento para vincular la variable de selección</description>
    <label>Evento</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipName>EV_Eventos</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>