force-app/main/default/objects/EV_CriterioPublicoObjetivo__c/fields/EV_LabelCriterio__c.field-meta.xml
<CustomField>
    <fullName>EV_LabelCriterio__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Label del criterio</label>
    <length>255</length>
    <type>Text</type>
</CustomField>