force-app/main/default/objects/EV_CriterioPublicoObjetivo__c/fields/EV_TipoCriterio__c.field-meta.xml
<CustomField>
    <fullName>EV_TipoCriterio__c</fullName>
    <description>Lista de selección donde se escogerá si el criterio es obligatorio, modificable u opcional.</description>
    <label>Tipo de criterio</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Obligatorio</fullName>
            </value>
            <value>
                <fullName>Obligatorio modificable</fullName>
            </value>
            <value>
                <fullName>Opcional</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>