force-app/main/default/objects/EV_CriterioPublicoObjetivo__c/fields/EV_VariablePublicoObjetivo__c.field-meta.xml
<CustomField>
    <fullName>EV_VariablePublicoObjetivo__c</fullName>
    <description>Relación a la variable del público objetivo</description>
    <label>Variable público objetivo</label>
    <referenceTo>EV_VariablePublicoOjetivo__c</referenceTo>
    <relationshipName>EV_VariablesPublicoObjetivo</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>